made some modification to handle case in-sensitive. Also reassured that the oldest item (if there is multiple item with the same name) get removed first regardless.