@@ -37,20 +37,20 @@ class FoodStorageTest {
     //Act
     foodStorage.addItemToFoodStorage(item1);
     //Assert
-    assertTrue(foodStorage.itemExist("Apple")); //the apple item exist in storage
-    assertEquals(1, foodStorage.getItems().get("apple").size()); //there is only one ArrayList for apple in the hashmap
+    assertTrue(foodStorage.itemExist("apple"), "Apple should exist in the storage");//the apple item exist in storage
+    assertEquals(1, foodStorage.getItems().get("apple").size(), "There should only be one entry for Apple");//there is only one ArrayList for apple in the hashmap
     
     //Add another Apple with the same expiration date, unit and price.
     Item item2 = new Item("Apple", 3, Unit.KILOGRAM, LocalDate.now().plusDays(10), 20);
     foodStorage.addItemToFoodStorage(item2);
     //Verifies that the quantity is updated and the there is only one arrayList for Apple.
-    assertEquals(1, foodStorage.getItems().get("apple").size());
-    assertEquals(8, foodStorage.getItems().get("apple").get(0).getQuantity());
+    assertEquals(1, foodStorage.getItems().get("apple").size(), "There should still be only one entry for Apple with matching attributes");
+    assertEquals(8, foodStorage.getItems().get("apple").get(0).getQuantity(), "Quantity should be updated to 8");
     
     //Add a Apple with different attributes
     Item item3 = new Item("Apple", 2, Unit.KILOGRAM, LocalDate.now().plusDays(15), 22);
     foodStorage.addItemToFoodStorage(item3);
-    assertEquals(2, foodStorage.getItems().get("Apple").size());
+    assertEquals(2, foodStorage.getItems().get("apple").size(), "A second entry should exist for Apple with different attributes");
     
     //negative test
     assertNotNull(foodStorage);
@@ -62,20 +62,30 @@ class FoodStorageTest {
    */
   @Test
   void testSearchForItemInFoodStorage() {
-    Item item = new Item("Milk", 1, Unit.LITRE, LocalDate.now().plusDays(5), 15);
-    foodStorage.addItemToFoodStorage(item);
+    Item item1 = new Item("Milk", 1, Unit.LITRE, LocalDate.now().plusDays(5), 15);
+    Item item2 = new Item("Milk", 2, Unit.LITRE, LocalDate.now().plusDays(10), 30); // Add a second item with the same name
+    foodStorage.addItemToFoodStorage(item1);
+    foodStorage.addItemToFoodStorage(item2);
     
-    Item result1 = foodStorage.searchForItemInFoodStorage("Milk");
-    Item result2 = foodStorage.searchForItemInFoodStorage("mIlK");//test case in-sensitive
+    List<Item> result1 = foodStorage.searchForItemsInFoodStorage("Milk");
+    List<Item> result2 = foodStorage.searchForItemsInFoodStorage("mIlK"); // Test case-insensitive
     
-    assertNotNull(result1);
-    assertEquals("Milk", result1.getName());
-    assertNotNull(result2);
-    assertEquals("Milk", result2.getName());
+    assertNotNull(result1, "Milk should be found");
+    assertFalse(result1.isEmpty(), "Result should not be empty");
+    assertEquals(2, result1.size(), "Should find two items named 'Milk'");
+    assertTrue(result1.stream().allMatch(item -> "Milk".equalsIgnoreCase(item.getName())), "All found items should have name 'Milk'");
     
-    //Negative tests
-    assertNull(foodStorage.searchForItemInFoodStorage("Boxing"));
-    assertThrows(NullPointerException.class, () -> foodStorage.searchForItemInFoodStorage(null));
+    assertNotNull(result2, "Case-insensitive search should find Milk");
+    assertFalse(result2.isEmpty(), "Result for case-insensitive search should not be empty");
+    assertEquals(2, result2.size(), "Case-insensitive search should find two items");
+    assertTrue(result2.stream().allMatch(item -> "Milk".equalsIgnoreCase(item.getName())), "All found items should have name 'Milk'");
+    
+    //Negative
+    List<Item> result3 = foodStorage.searchForItemsInFoodStorage("Boxing");
+    assertNotNull(result3, "Result for non-existent item should not be null");
+    assertTrue(result3.isEmpty(), "Non-existent item should return an empty list");
+    
+    assertThrows(NullPointerException.class, () -> foodStorage.searchForItemsInFoodStorage(null), "Searching for null should throw NullPointerException");
   }
   
   /**
@@ -88,14 +98,17 @@ class FoodStorageTest {
     foodStorage.addItemToFoodStorage(item1);
     foodStorage.addItemToFoodStorage(item2);
     double removedQuantity = foodStorage.removeItemFromFoodStorage("Orange", 4);
-    assertEquals(1, foodStorage.getItems().get("Orange").getFirst().getQuantity());
-    assertNotNull(foodStorage);
+    assertEquals(4, removedQuantity, "Total removed quantity should be 4");
+    
+    assertNotNull(foodStorage.getItems().get("orange"), "Orange list should still exist in storage");
+    assertEquals(1, foodStorage.getItems().get("orange").get(0).getQuantity(), "Remaining quantity of the first item should be 1");
+    
     foodStorage.removeItemFromFoodStorage("Orange", 1);
-    assertFalse(foodStorage.itemExist("Orange"));
+    assertFalse(foodStorage.itemExist("orange"), "Orange should no longer exist in storage after removing all quantities");
+    
     //negative tests
-    assertThrows(IllegalArgumentException.class, () -> foodStorage.removeItemFromFoodStorage("Orange", 1));
-    assertThrows(IllegalArgumentException.class, () -> foodStorage.removeItemFromFoodStorage("Apple", 2));
-    assertThrows(NullPointerException.class, () -> foodStorage.removeItemFromFoodStorage(null, 1));
+    assertThrows(IllegalArgumentException.class, () -> foodStorage.removeItemFromFoodStorage("Orange", 1), "Removing non-existent item should throw IllegalArgumentException");
+    assertThrows(IllegalArgumentException.class, () -> foodStorage.removeItemFromFoodStorage("Apple", 2), "Removing an item not in storage should throw IllegalArgumentException");
   }
   
   /**
@@ -103,20 +116,20 @@ class FoodStorageTest {
    */
   @Test
   void testGetExpiredItems() {
-    Item item1 = new Item("tomahawk", 1, Unit.PIECES, LocalDate.now().minusDays(1), 1);
+    Item item1 = new Item("Tomahawk", 1, Unit.PIECES, LocalDate.now().minusDays(1), 1);
     Item item2 = new Item("Chicken", 1, Unit.KILOGRAM, LocalDate.now().plusDays(5), 90);
     foodStorage.addItemToFoodStorage(item1);
     foodStorage.addItemToFoodStorage(item2);
     
     List<Item> expiredItems = foodStorage.getExpiredItems();
-    assertEquals(1, expiredItems.size());
-    assertEquals("tomahawk", expiredItems.getFirst().getName());
+    assertEquals(1, expiredItems.size(), "Only one item should be expired");
+    assertEquals("Tomahawk", expiredItems.get(0).getName(), "Expired item name should be Tomahawk");
     
     //Negative tests
     assertTrue(foodStorage.getExpiredItems().stream()
-        .noneMatch(item -> item.getName().equals("Chicken")));
+        .noneMatch(item -> item.getName().equals("Chicken")), "Non-expired items should not appear in the expired list");
     foodStorage = new FoodStorage();
-    assertTrue(foodStorage.getExpiredItems().isEmpty());
+    assertTrue(foodStorage.getExpiredItems().isEmpty(), "Empty storage should return no expired items");
   }
   
   /**
@@ -131,12 +144,12 @@ class FoodStorageTest {
     
     List<Item> itemsExpiringBeforeDate = foodStorage.getItemsExpiringBefore(LocalDate.now().plusDays(12));
     
-    assertEquals(1, itemsExpiringBeforeDate.size());
-    assertEquals("Steak", itemsExpiringBeforeDate.getFirst().getName());
+    assertEquals(1, itemsExpiringBeforeDate.size(), "Only one item should expire before the given date");
+    assertEquals("Steak", itemsExpiringBeforeDate.getFirst().getName(), "Item name should be Steak");
     
     //negative
-    assertTrue(foodStorage.getItemsExpiringBefore(LocalDate.now().plusDays(1)).isEmpty());
-    assertThrows(NullPointerException.class, () -> foodStorage.getItemsExpiringBefore(null));
+    assertTrue(foodStorage.getItemsExpiringBefore(LocalDate.now().plusDays(1)).isEmpty(), "No items should expire before today");
+    assertThrows(NullPointerException.class, () -> foodStorage.getItemsExpiringBefore(null), "Null date should throw NullPointerException");
   }
   
   /**
@@ -146,23 +159,18 @@ class FoodStorageTest {
   void testSortAlphabetically() {
     Item item1 = new Item("Banan", 5.0, Unit.PIECES, LocalDate.now().plusDays(10), 30.0);
     Item item2 = new Item("Apple", 5.0, Unit.PIECES, LocalDate.now().plusDays(7), 20.0);
-    Item item3 = new Item("Apple", 2.0, Unit.PIECES, LocalDate.now().plusDays(20), 22.0);
     
     foodStorage.addItemToFoodStorage(item1);
     foodStorage.addItemToFoodStorage(item2);
-    foodStorage.addItemToFoodStorage(item3);
     
     foodStorage.getFoodStorageAlphabetically();
     
-    assertEquals("Apple", foodStorage.getItems().get("Apple").getFirst());
-    assertEquals("Apple", foodStorage.getItems().get("Apple").get(1));
-    assertEquals("Banan", foodStorage.getItems().get("Banan").getLast());
+    List<String> sortedKeys = new ArrayList<>(foodStorage.getItems().keySet()).stream()
+        .sorted(String.CASE_INSENSITIVE_ORDER)
+        .toList();
     
-    ArrayList<Item> appleItems = foodStorage.getItems().get("Apple");
-    assertNotNull(appleItems);
-    
-    ArrayList<Item> bananaItems = foodStorage.getItems().get("Banana");
-    assertNotNull(bananaItems);
+    assertEquals("apple", sortedKeys.get(0), "Apple should be sorted first");
+    assertEquals("banan", sortedKeys.get(1), "Banan should be sorted second");
   }
   
   /**
@@ -175,16 +183,22 @@ class FoodStorageTest {
     foodStorage.addItemToFoodStorage(item1);
     foodStorage.addItemToFoodStorage(item2);
     
-    double totalValue = foodStorage.calculateTotalValue(foodStorage.getItems().values().stream().flatMap(List::stream));
+    double totalValue = foodStorage.calculateTotalValue(foodStorage.getItems().values().stream()
+        .flatMap(List::stream));
     double expectedTotalValue = item1.getPerUnitPrice() + item2.getPerUnitPrice();
     
     //assertEquals(17, totalValue);
     assertEquals(expectedTotalValue, totalValue, 0.01);
     
     //negative
-    assertThrows(IllegalArgumentException.class, () -> foodStorage.calculateTotalValue(null));
+    assertThrows(IllegalArgumentException.class, () -> foodStorage.calculateTotalValue(null), "Null stream should throw Ill.Arg.Exc.");
     foodStorage = new FoodStorage();
     assertEquals(0, foodStorage.calculateTotalValue(foodStorage.getItems().values().stream().flatMap(List::stream)));
+    
+    foodStorage = new FoodStorage();
+    assertEquals(0, foodStorage.calculateTotalValue(
+        foodStorage.getItems().values().stream().flatMap(List::stream)
+    ), "Total value of empty storage should be 0");
   }
   
   /**
